<?xml version="1.0"?>
<package format="2">
  <name>parameter_handler</name>
  <version>0.0.1</version>
  <description>The parameter_handler package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/leggedrobotics/parameter_handler</url>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_logger</depend>
  <depend>gtest</depend>
  <build_export_depend>eigen</build_export_depend>
</package>
