<?xml version="1.0"?>
<package format="2">
  <name>parameter_handler_doc</name>
  <version>0.3.7</version>
  <description>The parameter handler documentation package</description>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="msuetterlin@anybotics.com">Marco Sütterlin</maintainer>
  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/parameter_handler</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>parameter_handler</depend>
  <depend>parameter_handler_ros</depend>
  <depend>parameter_handler_std</depend>
  <depend>parameter_handler_msgs</depend>
  <depend>rqt_parameters</depend>
  <build_depend>doxygen</build_depend>

</package>
