<?xml version="1.0"?>

<package format="2">

  <name>rqt_parameters</name>
  <version>0.3.0</version>
  <description>The rqt_parameters package</description>

  <license>BSD</license>

  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="msuetterlin@anybotics.com">Marco Sütterlin</maintainer>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <url>https://github.com/anybotics/parameter_handler</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>parameter_handler_msgs</depend>
  <depend>std_srvs</depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

  <export>
    <architecture_inent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
